# ossguard-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: BRANCH_PROTECTION.md  dependabot.yml
.github/workflows/: binaries.yml  ci.yml  codeql.yml  npm-publish.yml  release.yml  sbom.yml  scorecard.yml  sigstore.yml
Formula/: ossguard.rb
npm/@ossguard/cli-darwin-arm64/: package.json
npm/@ossguard/cli-darwin-x64/: package.json
npm/@ossguard/cli-linux-arm64/: package.json
npm/@ossguard/cli-linux-x64/: package.json
npm/@ossguard/cli-win32-x64/: package.json
npm/ossguard/: README.md  package.json
npm/ossguard/lib/: resolve.js
src/ossguard/: __init__.py  cli.py  detector.py
src/ossguard/analyzers/: __init__.py  audit.py  badge.py  baseline.py  ci.py  compare.py  container.py  dep_health.py  drift.py  fix.py  fuzz.py  insights.py  license_check.py  maturity.py  pin.py  policy.py  reach.py  report.py  sbom_gen.py  secrets.py  slsa.py  supply_chain.py  tpn.py  update.py  watch.py
src/ossguard/apis/: __init__.py  deps_dev.py  osv.py
src/ossguard/generators/: __init__.py  branch_protection.py  codeql.py  dependabot.py  sbom.py  scorecard.py  security_md.py  sigstore.py
src/ossguard/parsers/: __init__.py  dependencies.py  sbom.py
tests/: test_analyzers.py  test_analyzers_ext.py  test_analyzers_tier2.py  test_cli.py  test_detector.py  test_generators.py  test_parsers.py
